# Google-ADK-Bootcamp

./: .gitignore  README.md  pyproject.toml
Module1-Basic_Agent/: README.md
Module10-Sequential_Agent/: README.md
Module11-Parallel_Agent/: README.md
Module12-Loop_Agent/: README.md
Module12-Loop_Agent/linkedin_post_agent/subagents/post_generator/: agent.py
Module12-Loop_Agent/linkedin_post_agent/subagents/post_refiner/: agent.py
Module12-Loop_Agent/linkedin_post_agent/subagents/post_reviewer/: agent.py  tools.py
Module2-Tool_Agent/: README.md
Module3-LiteLLM_Agent/: README.md
Module3-LiteLLM_Agent/dad_joke_agent/: .env.example  agent.py
Module4-Structured_Outputs/: README.md
Module5-Sessions_and_State/: README.md  basic_stateful_session.py
Module6-Persistent_Storage/: README.md  utils.py
Module7-Multi_Agent/: README.md
Module7-Multi_Agent/manager/sub_agents/funny_nerd/: agent.py
Module7-Multi_Agent/manager/sub_agents/news_analyst/: agent.py
Module7-Multi_Agent/manager/sub_agents/stock_analyst/: agent.py
Module8-Stateful_Multi_Agent/: README.md  main.py  utils.py
Module8-Stateful_Multi_Agent/customer_service_agent/sub_agents/course_support_agent/: agent.py
Module8-Stateful_Multi_Agent/customer_service_agent/sub_agents/order_agent/: agent.py
Module8-Stateful_Multi_Agent/customer_service_agent/sub_agents/policy_agent/: agent.py
Module9-Callbacks/: README.md
Module9-Callbacks/before_after_model/: agent.py
docs/: ADK_Best_Practices.md  Callbacks_and_Workflows.md
