[project]
name = "adk-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk[database]>=1.1.1",
    "google-generativeai>=0.8.5",
    "litellm>=1.72.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.61",
]
